--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ img { /* this is for the profile image */
     border-radius: 1000px;
     margin-right: 1000px;
     border: 5px solid;
-    border-color: black;
+    border-color: white;
     width: 20%;
 }
 h1.top {
@@ -16,12 +16,25 @@ h1.top {
 a {
     color: white;
 }
+b {
+    color: white;
+    font-weight: normal;
+}
 .center{ /* This centers the image, but needs to have with <= 50% */
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
 .description{
+    margin: auto;
     text-align: center;
     color: white;
+}
+.header{
+    color: white;
+    font-weight: bold;
+}
+.about{
+    color: white;
+    font-weight: normal;
 }
