--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,18 @@
 body{
     background-color: #510c92;
 }
-img { /* this is for the profile image */
+img.center { /* this is for the profile image */
     border-radius: 1000px;
     margin-right: 1000px;
     border: 5px solid;
     border-color: white;
     width: 20%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+img.subImage{
+    width: 400px;
 }
 h1.top {
     color: white;
@@ -20,11 +26,6 @@ b {
     color: white;
     font-weight: normal;
 }
-.center{ /* This centers the image, but needs to have with <= 50% */
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
 .description{
     margin: auto;
     text-align: center;
@@ -37,4 +38,19 @@ b {
 .about{
     color: white;
     font-weight: normal;
+}
+.projects{
+    color: white;
+}
+ul.titleList{
+    color: white;
+    font-size: large;
+    font-weight: bold;
+    list-style-type: square;
+}
+ul.subList{
+    color: white;
+    font-size: 80%;
+    font-weight: normal;
+    list-style-type: circle;
 }
